--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>HashCoding——2016百度前端学院</title>
+	<title>HashCoding——Metamind Visionaries</title>
 	
 	<link rel="stylesheet" href="css/main.css" />
 
