--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>HashCoding——Metamind Visionaries</title>
+	<title>Metamind Visionaries</title>
 	
 	<link rel="stylesheet" href="css/main.css" />
 
@@ -102,7 +102,7 @@
 					"/>
 				</svg>
         </div>
-		<p id="slogan">Established by 5 Web Front-End Developers.</p>
+		<p id="slogan">MetaMind slogen</p>
 		<div id="scroll_down">
 
 		</div>
